flux-config/infrastructure-base/kube-prometheus-stack/prometheus-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: prometheus
  namespace: monitoring
spec:
  hosts:
  - prometheus.local
  gateways:
  - istio-system/common-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: monitoring-kube-prometheus-prometheus
        port:
          number: 9090
